fix(header): fix heading image Fix that the background image not covering text properly

--- a/src/styles/other.scss
+++ b/src/styles/other.scss
@@ -1,22 +1,3 @@
-.bgWrap {
-  position: absolute;
-  left: 0;
-  height: 60vh;
-  width: 100vw;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.bgText {
-  margin: 0;
-  font-size: 2rem;
-  line-height: 3rem;
-  text-align: center;
-  padding-top: 40vh;
-  text-shadow: 1px 1px 1px #3c5c5e;
-}
-
-
 form {
 	.fieldError::before {
 		display: inline;
